// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a ButtonToggle control 1`] = `
<Button
  bgColorOff="inherit"
  bgColorOn="inherit"
  className="ui-button-toggle buttonToggle normal test-class"
  contentEditable={false}
  direction="right"
  disabled={false}
  fgColorOff="gray"
  fgColorOn="black"
  focus={false}
  height=""
  iconName="bomb"
  iconNameOff="bomb"
  iconNameOn="bomb"
  iconStyle=""
  id=""
  initialToggle={false}
  location="none"
  noedit={false}
  nohover={false}
  noripple={true}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "inherit",
      "color": "gray",
    }
  }
  testing={true}
  visible={true}
  width=""
  xcss={null}
/>
`;

exports[`Test creation of a ButtonToggle control with on/off icons 1`] = `
<ButtonToggle
  bgColorOff="inherit"
  bgColorOn="inherit"
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  fgColorOff="gray"
  fgColorOn="black"
  focus={false}
  height=""
  iconName="bomb"
  iconNameOff="star-o"
  iconNameOn="star"
  iconStyle=""
  id=""
  initialToggle={false}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  visible={true}
  width=""
  xcss={null}
>
  <Button
    bgColorOff="inherit"
    bgColorOn="inherit"
    className="ui-button-toggle buttonToggle normal"
    contentEditable={false}
    direction="right"
    disabled={false}
    fgColorOff="gray"
    fgColorOn="black"
    focus={false}
    height=""
    iconName="star-o"
    iconNameOff="star-o"
    iconNameOn="star"
    iconStyle=""
    id=""
    initialToggle={false}
    location="none"
    noedit={false}
    nohover={false}
    noripple={true}
    onClick={[Function]}
    selected={false}
    sizing="normal"
    style={
      Object {
        "backgroundColor": "inherit",
        "color": "gray",
      }
    }
    testing={true}
    visible={true}
    width=""
    xcss={null}
  >
    <div
      className="ui-button button normal ui-button-toggle buttonToggle normal"
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "inherit",
          "color": "gray",
        }
      }
    >
      <Icon
        className="icon"
        contentEditable={false}
        direction="right"
        disabled={false}
        focus={false}
        height=""
        iconName="star-o"
        id=""
        imageFile=""
        location="none"
        noedit={false}
        nohover={false}
        noripple={false}
        selected={false}
        sizing="normal"
        style={Object {}}
        testing={true}
        visible={true}
        width=""
        xcss={null}
      >
        <ThemeProvider
          theme={
            Object {
              "backgroundColor": "#ffffff",
              "borderColor": "#004358",
              "color": "#000000",
              "headerBackgroundColor": "#004358",
              "headerForegroundColor": "#ffffff",
              "hoverColor": "#ffe11a",
            }
          }
        >
          <Icon__FontAwesome
            className="ui-icon fa fa-fw fa-star-o icon"
            sizing="normal"
            style={Object {}}
          >
            <i
              className="ui-icon fa fa-fw fa-star-o icon Icon__FontAwesome-kBRBjz jFGZDN"
              style={Object {}}
            />
          </Icon__FontAwesome>
        </ThemeProvider>
      </Icon>
    </div>
  </Button>
</ButtonToggle>
`;

exports[`Test disabling of a ButtonToggle 1`] = `
<ButtonToggle
  bgColorOff="inherit"
  bgColorOn="inherit"
  className=""
  contentEditable={false}
  direction="right"
  disabled={true}
  fgColorOff="gray"
  fgColorOn="black"
  focus={false}
  height=""
  iconName="bomb"
  iconNameOff="bomb"
  iconNameOn="bomb"
  iconStyle=""
  id=""
  initialToggle={false}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  visible={true}
  width=""
  xcss={null}
>
  <Button
    bgColorOff="inherit"
    bgColorOn="inherit"
    className="ui-button-toggle buttonToggle normal disabled nohover"
    contentEditable={false}
    direction="right"
    disabled={true}
    fgColorOff="gray"
    fgColorOn="black"
    focus={false}
    height=""
    iconName="bomb"
    iconNameOff="bomb"
    iconNameOn="bomb"
    iconStyle=""
    id=""
    initialToggle={false}
    location="none"
    noedit={false}
    nohover={false}
    noripple={true}
    onClick={[Function]}
    selected={false}
    sizing="normal"
    style={
      Object {
        "backgroundColor": "inherit",
        "color": "gray",
      }
    }
    testing={true}
    visible={true}
    width=""
    xcss={null}
  >
    <div
      className="ui-button button normal ui-button-toggle buttonToggle normal disabled nohover disabled nohover"
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "inherit",
          "color": "gray",
        }
      }
    >
      <Icon
        className="icon"
        contentEditable={false}
        direction="right"
        disabled={false}
        focus={false}
        height=""
        iconName="bomb"
        id=""
        imageFile=""
        location="none"
        noedit={false}
        nohover={false}
        noripple={false}
        selected={false}
        sizing="normal"
        style={Object {}}
        testing={true}
        visible={true}
        width=""
        xcss={null}
      >
        <ThemeProvider
          theme={
            Object {
              "backgroundColor": "#ffffff",
              "borderColor": "#004358",
              "color": "#000000",
              "headerBackgroundColor": "#004358",
              "headerForegroundColor": "#ffffff",
              "hoverColor": "#ffe11a",
            }
          }
        >
          <Icon__FontAwesome
            className="ui-icon fa fa-fw fa-bomb icon"
            sizing="normal"
            style={Object {}}
          >
            <i
              className="ui-icon fa fa-fw fa-bomb icon Icon__FontAwesome-kBRBjz jFGZDN"
              style={Object {}}
            />
          </Icon__FontAwesome>
        </ThemeProvider>
      </Icon>
    </div>
  </Button>
</ButtonToggle>
`;

exports[`Test making a ButtonToggle invisible 1`] = `
<ButtonToggle
  bgColorOff="inherit"
  bgColorOn="inherit"
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  fgColorOff="gray"
  fgColorOn="black"
  focus={false}
  height=""
  iconName="bomb"
  iconNameOff="bomb"
  iconNameOn="bomb"
  iconStyle=""
  id=""
  initialToggle={false}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  visible={false}
  width=""
  xcss={null}
>
  <Button
    bgColorOff="inherit"
    bgColorOn="inherit"
    className="ui-button-toggle buttonToggle normal invisible"
    contentEditable={false}
    direction="right"
    disabled={false}
    fgColorOff="gray"
    fgColorOn="black"
    focus={false}
    height=""
    iconName="bomb"
    iconNameOff="bomb"
    iconNameOn="bomb"
    iconStyle=""
    id=""
    initialToggle={false}
    location="none"
    noedit={false}
    nohover={false}
    noripple={true}
    onClick={[Function]}
    selected={false}
    sizing="normal"
    style={
      Object {
        "backgroundColor": "inherit",
        "color": "gray",
      }
    }
    testing={true}
    visible={false}
    width=""
    xcss={null}
  >
    <div
      className="ui-button button normal ui-button-toggle buttonToggle normal invisible invisible"
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "inherit",
          "color": "gray",
        }
      }
    >
      <Icon
        className="icon"
        contentEditable={false}
        direction="right"
        disabled={false}
        focus={false}
        height=""
        iconName="bomb"
        id=""
        imageFile=""
        location="none"
        noedit={false}
        nohover={false}
        noripple={false}
        selected={false}
        sizing="normal"
        style={Object {}}
        testing={true}
        visible={true}
        width=""
        xcss={null}
      >
        <ThemeProvider
          theme={
            Object {
              "backgroundColor": "#ffffff",
              "borderColor": "#004358",
              "color": "#000000",
              "headerBackgroundColor": "#004358",
              "headerForegroundColor": "#ffffff",
              "hoverColor": "#ffe11a",
            }
          }
        >
          <Icon__FontAwesome
            className="ui-icon fa fa-fw fa-bomb icon"
            sizing="normal"
            style={Object {}}
          >
            <i
              className="ui-icon fa fa-fw fa-bomb icon Icon__FontAwesome-kBRBjz jFGZDN"
              style={Object {}}
            />
          </Icon__FontAwesome>
        </ThemeProvider>
      </Icon>
    </div>
  </Button>
</ButtonToggle>
`;

exports[`Test retrieval of ButtonToggle props object 1`] = `
Object {
  "bgColorOff": "inherit",
  "bgColorOn": "inherit",
  "className": "",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "fgColorOff": "gray",
  "fgColorOn": "black",
  "focus": false,
  "height": "",
  "iconName": "bomb",
  "iconNameOff": "bomb",
  "iconNameOn": "bomb",
  "iconStyle": "",
  "id": "",
  "initialToggle": false,
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "onClick": [Function],
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "visible": true,
  "width": "",
  "xcss": null,
}
`;
